fixed Input bar and title misalignment

--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
   }
   
   body {
-  
+    
     width: 100%;
     height: 100%;
     background-color: #171717;
@@ -84,22 +84,24 @@
     }
   }
 
-  #heading{
-
-    background: none;
+  .title {
     display: flex;
-    align-items: flex-start;
     justify-content: center;
+    align-items: center;
+    
+  }
+
+  #heading{
+   
     color: #fff;
     font-family: 'Work Sans', sans-serif;
     font-weight: 900;
-    font-size: 48px;
+    font-size: 45px;
     text-transform: uppercase;
-    text-align: center;
     line-height: 48px;
-    padding-left: 35px;
-    align-self: center;
     padding-top: 50px;
+    
+
     
   }
 
@@ -125,20 +127,31 @@
     }
 }
 
-input[type="password"] {
+  .input {
+    display: flex;
+    justify-content: center;
+  }
+
+
+  #typed-password {
+  display: flex;
   font-size: 19px;
   color: #000000;
   border-width: 20px;
   border-color: red;
   font-family: 'Calibri';
-  margin-left: 500px;
   z-index: 10;
-  margin-top: 20px;
-  width: 49.5%;
+  margin-top: 20px; 
+  width: 50%;
+  
+
+  
   
   
  
 }
+
+
 
 #quantum {
   height: 300px;
@@ -254,7 +267,8 @@ dialog::backdrop {
   background: none;
   outline: none;
 }
-  
+
+
 
 
 
